# cppimagefilterbase

./: BasicFilter.cpp  BasicFilter.h  Blur.cpp  Blur.h  CMakeLists.txt  CfgReader.cpp  CfgReader.h  Edge.cpp  Edge.h  FilterBW.cpp  FilterBW.h  FilterRed.cpp  FilterRed.h  Threshold.cpp  Threshold.h  config.txt  main.cpp  png_toolkit.cpp  png_toolkit.h
